--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -63,8 +63,9 @@ nav {
   gap: 5px;
 
   width: 50px;
-  height: 30px;
+  height: 15px;
   padding: 5px;
+  margin-top: 5px;
 
   background-color: var(--dark-blue);
   border-radius: 50px;
@@ -72,8 +73,8 @@ nav {
 
 .dark-toggle .ball {
   position: absolute;
-  top: 2px;
-  left: 2px;
+  top: -5px;
+  left: 5px;
   transform: var(--ball-transition);
   transition: transform 0.2s linear;
 
